# ncurses-scrollable

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  bootstrap.sh  configure.ac  ui.c  ui.h
